# orbit-console

./: .gitignore  CMakeLists.txt  README.md
src/: emulator.cpp  sdl_window.cpp
src/common/: ios_low_memory.cpp  ios_low_memory.h  path_util.cpp  signal_context.cpp  va_ctx.h
src/core/: address_space.cpp  linker.cpp  memory.cpp  memory.h  module.cpp  thread.cpp  tls.cpp  tls.h  user_manager.cpp
src/core/cpu/custom_bridge/: custom_cpu_translator.cpp  custom_cpu_translator.h
src/core/libraries/: libs.cpp
src/core/libraries/audio/: openal_audio_out.cpp  sdl_audio_out.cpp
src/core/libraries/fiber/: fiber_context.s
src/core/libraries/gnmdriver/: gnmdriver.cpp  gnmdriver.h
src/core/libraries/kernel/threads/: exception.cpp  mutex.cpp  stack.S
src/core/libraries/network/: net_epoll.h  net_util.cpp
src/core/libraries/np/np_web_api/: np_web_api.cpp
src/core/libraries/videoout/: driver.cpp  video_out.cpp
src/core/loader/: elf.cpp
src/imgui/renderer/: CMakeLists.txt
src/ios/: Info.plist  OrbitIconRenderer.h  OrbitIconRenderer.mm  ShadAppDelegate.h  ShadAppDelegate.mm  ShadIOSCoreBridge.h  ShadIOSCoreBridge.mm  ShadIOSMain.mm  ShadPS4_iOS.entitlements  ShadViewController.h  ShadViewController.mm
src/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/ios/Tools/: generate_orbit_app_icon.swift
src/shader_recompiler/backend/spirv/: spirv_emit_context.h
src/shader_recompiler/ir/passes/: flatten_extended_userdata_pass.cpp
src/video_core/: cache_storage.cpp  renderdoc.cpp
src/video_core/renderer_vulkan/: vk_pipeline_serialization.cpp  vk_platform.cpp  vk_presenter.cpp  vk_swapchain.cpp
src/video_core/texture_cache/: texture_cache.cpp
